[gd_scene load_steps=6 format=3 uid="uid://c63mdihly55vy"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_jdq2r"]
[ext_resource type="Script" path="res://scripts/CameraPivot3P.gd" id="2_julfg"]
[ext_resource type="Script" path="res://scripts/CameraPivot1P.gd" id="3_c26an"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mghgg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tac3y"]

[node name="player" type="CharacterBody3D"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 2.08165e-12, 2, 2.08165e-12)
script = ExtResource("1_jdq2r")

[node name="CameraPivot3P" type="Node3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, -0.851598)
script = ExtResource("2_julfg")

[node name="Camera3D" type="Camera3D" parent="CameraPivot3P"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.245598, 1.23029)
current = true

[node name="CameraPivot1P" type="Node3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, -0.215069, -5.17392)
script = ExtResource("3_c26an")

[node name="Camera3D" type="Camera3D" parent="CameraPivot1P"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.245598, 1.23029)
current = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShapeForArea" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_mghgg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_mghgg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_tac3y")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
